@@ -23,7 +23,7 @@
 # endpoints (the "plain" one and the "tls" one) are equivalent in terms of
 # functionality; but we keep both endpoints to satisfy the RFC 5766 specs.
 # For secure TCP connections, we currently support SSL version 3 and 
-# TLS version 1.0, 1.1 and 1.2. 
+# TLS version 1.0, 1.1 and 1.2. SSL2 "encapculation mode" is also supported.
 # For secure UDP connections, we support DTLS version 1.
 #
 #tls-listening-port=5349
