@@ -63,7 +63,7 @@ extern int dont_fragment;
 extern u08bits g_uname[STUN_MAX_USERNAME_SIZE+1];
 extern st_password_t g_upwd;
 extern int use_fingerprints;
-extern SSL_CTX *root_tls_ctx[4];
+extern SSL_CTX *root_tls_ctx[32];
 extern int root_tls_ctx_num;
 extern int RTP_PACKET_INTERVAL;
 extern u08bits relay_transport;
